--- a/style.css
+++ b/style.css
@@ -74,7 +74,6 @@
   line-height: 1.71429;
   font-size: 0.875rem;
   text-transform: unset;
-  font-family: Poppins, sans-serif;
   min-width: 64px;
   padding: 6px 16px;
   border-radius: 8px;
@@ -82,14 +81,124 @@
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
     color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-  color: rgb(255, 255, 255);
+  color: #ffffff;
   box-shadow: rgba(145, 158, 171, 0.2) 0px 3px 1px -2px,
     rgba(145, 158, 171, 0.14) 0px 2px 2px 0px,
     rgba(145, 158, 171, 0.12) 0px 1px 5px 0px;
-  background: rgb(118, 53, 220);
+  background: #7635dc;
+}
+
+.welcome_back_card .left_side_content .go_now_btn:hover {
+  transition: all 0.5s ease-in-out;
+  background-color: #5e2ab0;
+  box-shadow: rgba(145, 158, 171, 0.2) 0px 2px 4px -1px,
+    rgba(145, 158, 171, 0.14) 0px 4px 5px 0px,
+    rgba(145, 158, 171, 0.12) 0px 1px 10px 0px;
 }
 
 .welcome_back_card .welcome_image {
   max-width: 220px;
   width: 100%;
+}
+/* =======Welcome back css end  ========= */
+
+/* =======featured app css start  ========= */
+.featured_box_card {
+  background-color: rgb(255, 255, 255);
+  color: rgb(33, 43, 54);
+  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  overflow: hidden;
+  box-shadow: rgba(145, 158, 171, 0.08) 0px 0px 2px 0px,
+    rgba(145, 158, 171, 0.08) 0px 12px 24px -4px;
+  z-index: 0;
+  border-radius: 16px;
+  width: 100%;
+  min-height: 285px;
+  background-image: url("/assets/images/featured_01.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  object-fit: cover;
+  position: relative;
+}
+
+.featured_box_card::before {
+  content: "";
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  position: absolute;
+  background: linear-gradient(rgba(22, 28, 36, 0) 0%, rgb(22, 28, 36) 75%);
+}
+
+.featured_box_card .featured_inner_content {
+  padding: 24px;
+  position: absolute;
+  bottom: -5%;
+}
+
+.featured_box_card .featured_inner_content h6 {
+  margin: 0px;
+  line-height: 1.5;
+  font-size: 1rem;
+  font-family: Poppins, sans-serif;
+  color: #7635dc;
+  font-weight: 600;
+  padding-bottom: 16px;
+}
+
+.featured_box_card .featured_inner_content h5 {
+  font-size: 1.25rem;
+  margin: 0px;
+  font-weight: 700;
+  line-height: 1.5;
+  color: #ffffff;
+  padding-bottom: 8px;
+}
+
+.featured_box_card .featured_inner_content p {
+  margin: 0px;
+  font-weight: 600;
+  line-height: 1.5;
+  font-size: 1rem;
+  color: #ffffff;
+  padding-bottom: 16px;
+}
+/* =======featured app css end  ========= */
+
+/* ========= Custom Media Query ========== */
+@media (max-width: 991.98px) {
+  /* Welcome back  start */
+  .welcome_back_card .welcome_image {
+    display: none;
+  }
+  /* Welcome back  end */
+}
+
+@media (max-width: 767.98px) {
+  /* Welcome back  start */
+  .welcome_back_card .welcome_image {
+    display: block;
+  }
+  /* Welcome back  end */
+}
+
+@media (max-width: 575.98px) {
+  /* Welcome back  start */
+  .welcome_back_content {
+    width: 100%;
+    text-align: center;
+  }
+
+  .welcome_back_card .left_side_content h4,
+  .welcome_back_card .left_side_content p {
+    margin: 0 auto;
+  }
+
+  .welcome_back_card .welcome_image {
+    margin: 0 auto;
+  }
+  /* Welcome back  end */
 }
