speed score radial bar add

--- a/style.css
+++ b/style.css
@@ -104,8 +104,7 @@
 
 /* =======featured app css start  ========= */
 .featured_box_card {
-  background-color: rgb(255, 255, 255);
-  color: rgb(33, 43, 54);
+  color: #212b36;
   transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   overflow: hidden;
   box-shadow: rgba(145, 158, 171, 0.08) 0px 0px 2px 0px,
@@ -120,6 +119,7 @@
   background-position: center center;
   object-fit: cover;
   position: relative;
+  margin-bottom: 25px;
 }
 
 .featured_box_card::before {
@@ -166,7 +166,60 @@
   color: #ffffff;
   padding-bottom: 16px;
 }
-/* =======featured app css end  ========= */
+/* ======= featured app css end  ========= */
+
+/* ======= Speed score css end  ========= */
+.card {
+  background-color: rgb(255, 255, 255);
+  color: rgb(33, 43, 54);
+  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  overflow: hidden;
+  border-radius: 16px;
+  position: relative;
+  z-index: 0;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1.6rem 3rem;
+  min-height: 424px;
+}
+
+.card .card-body h3 {
+  font-size: 1.125rem;
+  margin: 0px;
+  font-weight: 700;
+  line-height: 1.55556;
+  display: block;
+  color: #212b36;
+}
+
+.card .card-body p {
+  margin: 0px;
+  line-height: 1.57143;
+  font-size: 0.875rem;
+  font-weight: 400;
+  color: #637381;
+  display: block;
+}
+/* ======= Speed score css end  ========= */
+
+/* ======= Website visits css start  ========= */
+.card .card-body .card-title {
+  margin: 0px;
+  font-weight: 700;
+  line-height: 1.55556;
+  font-size: 1.125rem;
+  display: block;
+  color: #212b36;
+}
+
+.card .card-body h6 {
+  margin: 0px;
+  line-height: 1.57143;
+  font-size: 0.875rem;
+  font-weight: 400;
+  color: rgb(99, 115, 129);
+  display: block;
+}
+
+/* ======= Website visits css end  ========= */
 
 /* ========= Custom Media Query ========== */
 @media (max-width: 991.98px) {
