--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   font-weight: 500;
 }
 
-/* =======Welcome back css start  ========= */
+/* ======= Welcome back css start  ========= */
 .welcome_back_card {
   color: #212b36;
   transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
@@ -100,9 +100,9 @@
   max-width: 220px;
   width: 100%;
 }
-/* =======Welcome back css end  ========= */
+/* ======= Welcome back css end  ========= */
 
-/* =======featured app css start  ========= */
+/* ======= featured app css start  ========= */
 .featured_box_card {
   color: #212b36;
   transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
@@ -249,8 +249,176 @@
   padding: 9px 10px;
   transition: 0.15s ease all;
 }
-
 /* ======= Website visits css end  ========= */
+
+/* ======= weekly sales css start  ========= */
+.weekly_sale_card {
+  color: rgb(33, 43, 54);
+  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  overflow: hidden;
+  box-shadow: rgba(145, 158, 171, 0.08) 0px 0px 2px 0px,
+    rgba(145, 158, 171, 0.08) 0px 12px 24px -4px;
+  position: relative;
+  z-index: 0;
+  padding: 32px 16px;
+  border-radius: 16px;
+  min-height: 300px;
+  display: flex;
+  flex-direction: column;
+  -webkit-box-align: center;
+  align-items: center;
+  background: linear-gradient(
+      135deg,
+      rgba(185, 133, 244, 0.2),
+      rgba(118, 53, 220, 0.2)
+    )
+    rgb(255, 255, 255);
+  border: 0;
+  margin-top: 16px;
+}
+
+.weekly_sale_card img {
+  height: 84px;
+  width: 84px;
+}
+
+.weekly_sale_card h2 {
+  margin: 0px;
+  font-size: 3rem;
+  color: rgb(32, 10, 105);
+  padding-top: 16px;
+  font-weight: 800;
+  line-height: 1.5;
+}
+
+.weekly_sale_card p {
+  margin: 0px;
+  font-size: 0.875rem;
+  color: rgb(32, 10, 105);
+  padding-top: 16px;
+  font-weight: 600;
+  line-height: 1.5;
+}
+/* ======= weekly sales css end  ========= */
+
+/* ======= invite friends css start  ========= */
+.invite_friends_card {
+  color: rgb(33, 43, 54);
+  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  overflow: hidden;
+  box-shadow: rgba(145, 158, 171, 0.08) 0px 0px 2px 0px,
+    rgba(145, 158, 171, 0.08) 0px 12px 24px -4px;
+  position: relative;
+  z-index: 0;
+  padding: 32px 16px;
+  border-radius: 16px;
+  min-height: 300px;
+  background: linear-gradient(135deg, rgb(118, 53, 220), rgb(67, 26, 158));
+  border: 0;
+  margin-top: 16px;
+}
+
+.invite_friends_card .invite_friends_card_heading {
+  display: flex;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.invite_friends_card
+  .invite_friends_card_heading
+  .invite_friends_heading_left
+  h5 {
+  margin: 0px;
+  font-size: 1.25rem;
+  color: rgb(255, 255, 255);
+  font-weight: 700;
+  line-height: 1.5;
+  width: 135px;
+}
+
+.invite_friends_card
+  .invite_friends_card_heading
+  .invite_friends_heading_right
+  h2 {
+  margin: 0px;
+  font-size: 3rem;
+  color: rgb(255, 255, 255);
+  font-weight: 800;
+  line-height: 1.3;
+  width: 97px;
+}
+
+.invite_friends_card form {
+  flex-direction: column;
+  display: flex;
+  -webkit-box-pack: start;
+  justify-content: flex-start;
+  padding-top: 32px;
+  /* position: relative; */
+}
+
+.invite_friends_card input {
+  width: 100%;
+  height: 50px;
+  margin: 40px 0px 0px;
+  vertical-align: top;
+  padding: 5px 15px;
+  background-color: rgb(255, 255, 255);
+  border: 0px solid;
+  font-size: 1rem;
+  font-weight: 400;
+  color: rgb(33, 43, 54);
+  box-sizing: border-box;
+  cursor: text;
+  display: inline-flex;
+  flex-direction: column;
+  -webkit-box-align: center;
+  align-items: center;
+  position: relative;
+  border-radius: 8px;
+  outline: 0;
+}
+
+.invite_friends_card .invite_btn {
+  display: inline-flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+  outline: 0px;
+  border: 0px;
+  margin: 0px;
+  cursor: pointer;
+  user-select: none;
+  vertical-align: middle;
+  appearance: none;
+  text-decoration: none;
+  font-weight: 700;
+  line-height: 1.71429;
+  font-size: 0.875rem;
+  text-transform: unset;
+  font-family: Poppins, sans-serif;
+  min-width: 64px;
+  padding: 6px 8px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  background-color: rgb(255, 171, 0);
+  border-radius: 10px;
+  color: rgb(69, 79, 91);
+  width: 60px;
+  position: absolute;
+  right: 5%;
+  top: 58%;
+}
+
+/* ======= invite friends css end  ========= */
 
 /* ========= Custom Media Query ========== */
 @media (max-width: 991.98px) {
