--- a/style.css
+++ b/style.css
@@ -414,13 +414,121 @@
   color: rgb(69, 79, 91);
   width: 60px;
   position: absolute;
-  right: 5%;
+  right: 6%;
   top: 58%;
 }
 
 /* ======= invite friends css end  ========= */
 
+/* ======= upgrade plan css start ========== */
+.upgrade_plan_card {
+  color: rgb(33, 43, 54);
+  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  overflow: hidden;
+  box-shadow: rgba(145, 158, 171, 0.08) 0px 0px 2px 0px,
+    rgba(145, 158, 171, 0.08) 0px 12px 24px -4px;
+  position: relative;
+  z-index: 0;
+  padding: 32px 16px;
+  border-radius: 16px;
+  min-height: 300px;
+  background: linear-gradient(
+      135deg,
+      rgba(185, 133, 244, 0.2),
+      rgba(118, 53, 220, 0.2)
+    )
+    rgb(255, 255, 255);
+  border: 0;
+  margin-top: 16px;
+}
+
+.upgrade_plan_card .upgrade_plan_content {
+  display: block;
+  text-align: center;
+}
+
+.upgrade_plan_card .upgrade_plan_content .upgrade_plan_image_content {
+  position: relative;
+}
+
+.upgrade_plan_card
+  .upgrade_plan_content
+  .upgrade_plan_image_content
+  .upgrade_img {
+  height: 120px;
+  max-width: 100%;
+  display: inline-block;
+  vertical-align: bottom;
+}
+
+.upgrade_plan_card
+  .upgrade_plan_content
+  .upgrade_plan_image_content
+  .character_img {
+  height: 150px;
+  position: absolute;
+  right: 73px;
+}
+
+.upgrade_plan_card .upgrade_plan_content .upgrade_plan_btn {
+  padding-top: 32px;
+}
+
+.upgrade_plan_card .upgrade_plan_content .upgrade_plan_btn button {
+  display: inline-flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  position: relative;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+  outline: 0px;
+  border: 0px;
+  margin: 0px;
+  cursor: pointer;
+  user-select: none;
+  vertical-align: middle;
+  appearance: none;
+  text-decoration: none;
+  font-weight: 700;
+  line-height: 1.71429;
+  font-size: 0.875rem;
+  text-transform: unset;
+  font-family: Poppins, sans-serif;
+  min-width: 64px;
+  padding: 8px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  background-color: rgb(118, 53, 220);
+  border-radius: 5px;
+  color: rgb(255, 255, 255);
+  width: 150px;
+}
+
+.upgrade_plan_card .upgrade_plan_content .upgrade_plan_btn button:hover {
+  background-color: rgb(94, 42, 176);
+  transition: all 0.5s ease-in-out;
+}
+
+.upgrade_plan_card .upgrade_plan_content .upgrade_plan_text {
+  margin-top: 15px;
+}
+
+.upgrade_plan_card .upgrade_plan_content .upgrade_plan_text p {
+  margin: 0px;
+  color: rgb(32, 10, 105);
+  font-weight: 400;
+  line-height: 1.5;
+  font-size: 12px;
+}
+
+/* ======= upgrade plan css end ========== */
+
 /* ========= Custom Media Query ========== */
+/* Large screen media query */
 @media (max-width: 991.98px) {
   /* Welcome back  start */
   .welcome_back_card .welcome_image {
@@ -429,6 +537,7 @@
   /* Welcome back  end */
 }
 
+/* medium screen media query */
 @media (max-width: 767.98px) {
   /* Welcome back  start */
   .welcome_back_card .welcome_image {
@@ -437,6 +546,7 @@
   /* Welcome back  end */
 }
 
+/* small screen media query */
 @media (max-width: 575.98px) {
   /* Welcome back  start */
   .welcome_back_content {
