--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@
 /* ======= featured app css end  ========= */
 
 /* ======= Speed score css end  ========= */
-.card {
+.card-speed-score {
   background-color: rgb(255, 255, 255);
   color: rgb(33, 43, 54);
   transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
@@ -181,7 +181,7 @@
   min-height: 424px;
 }
 
-.card .card-body h3 {
+.card-speed-score .card-body h3 {
   font-size: 1.125rem;
   margin: 0px;
   font-weight: 700;
@@ -190,7 +190,7 @@
   color: #212b36;
 }
 
-.card .card-body p {
+.card-speed-score .card-body p {
   margin: 0px;
   line-height: 1.57143;
   font-size: 0.875rem;
@@ -201,7 +201,19 @@
 /* ======= Speed score css end  ========= */
 
 /* ======= Website visits css start  ========= */
-.card .card-body .card-title {
+.website_visit_card {
+  background-color: rgb(255, 255, 255);
+  color: rgb(33, 43, 54);
+  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  overflow: hidden;
+  border-radius: 16px;
+  position: relative;
+  z-index: 0;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1.6rem 3rem;
+  min-height: 424px;
+}
+
+.website_visit_card .card-body .card-title {
   margin: 0px;
   font-weight: 700;
   line-height: 1.55556;
@@ -210,7 +222,7 @@
   color: #212b36;
 }
 
-.card .card-body h6 {
+.website_visit_card .card-body h6 {
   margin: 0px;
   line-height: 1.57143;
   font-size: 0.875rem;
@@ -250,6 +262,44 @@
   transition: 0.15s ease all;
 }
 /* ======= Website visits css end  ========= */
+
+/* ======= pages optimized css start  ========= */
+.page_optimized_card {
+  background-color: rgb(255, 255, 255);
+  color: rgb(33, 43, 54);
+  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  overflow: hidden;
+  position: relative;
+  z-index: 0;
+  padding: 8px 16px;
+  border-radius: 16px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1.6rem 3rem;
+}
+
+.page_optimized_card h6 {
+  margin: 0px;
+  font-weight: 600;
+  line-height: 1.5;
+  font-size: 1rem;
+  color: rgb(99, 115, 129);
+  padding-top: 16px;
+}
+
+.page_optimized_card .media-body {
+  display: flex;
+  flex-direction: row;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  align-items: center;
+}
+
+.page_optimized_card .media-body h4 {
+  margin: 0px;
+  line-height: 1.5;
+  font-size: 1.25rem;
+}
+/* ======= pages optimized css end  ========= */
 
 /* ======= weekly sales css start  ========= */
 .weekly_sale_card {
@@ -417,7 +467,6 @@
   right: 6%;
   top: 58%;
 }
-
 /* ======= invite friends css end  ========= */
 
 /* ======= upgrade plan css start ========== */
@@ -524,7 +573,6 @@
   line-height: 1.5;
   font-size: 12px;
 }
-
 /* ======= upgrade plan css end ========== */
 
 /* ========= Custom Media Query ========== */
